Hook up client-based Geolocation mock

This simply involves updating GeolocationMock, which is called by DRT from
Java, to call the GeolocationClientMock via GeolocationManager, rather than the
old GeolocationServiceMock. Note that GeolocationClientMock is tied to a
specific page, whereas GeolocationServiceMock had static methods, so we need to
pass the WebViewCore from Java.

We can now safely exclude the non-client-based files from the build.

We pass all Geolocation LayoutTests, except for
permission-denied-already-[error|success].html, which are flaky due to
https://bugs.webkit.org/show_bug.cgi?id=87033.

See corresponding framework change I6d88d5dce5c2148812b191a5b452718bf0854aeb.

Bug: 6511338
Change-Id: Ib74a3c05991593e75c3138415d4ac0bf0c9aefa9